[tool.poetry]
name = "gui-learning"
version = "0.1.0"
description = ""
authors = ["Monika"]
readme = "README.md"
packages = [{include = "gui_learning"}]

[tool.poetry.dependencies]
python = "^3.8"
PyQt6 = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
